Refactored GlassFishTestEnvironment to more flexible GlassFishEnvironment
Signed-off-by: David Matějček <david.matejcek@omnifish.ee>